--- a/index.html
+++ b/index.html
@@ -1,10 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html lang="ru">
+
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Магазин одежды для нефоров и альтушек"  >
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <link href="outlines.css" rel="stylesheet" >
+    <title>Nefor store</title>
 </head>
+
 <body>
+<header>
+    <div class="header">
+
+       <!-- <span>-->
+        <div class="left-buttons">
+            <button class="header_buttons" id="women"  >Женское</button>
+            <button class="header_buttons"  id="men" >Мужское</button>
+
+        </div>
+
+        <button   class="header_buttons"  id="main_link">Nefor store</button>
+
+        <span class="icon-buttons">
+            <a  href="#"> <i class="fas fa-search">    </i>     </a>
+             <a  href="#"> <i class="fas fa-user">    </i>     </a>
+             <a  href="#"> <i class="fas fa-heart">    </i>     </a>
+             <a  href="#"> <i class="fas fa-shopping-bag">    </i>     </a>
+        </span>
+
+
+    </div>
+</header>
+
+<main></main>
+
+
+<footer></footer>
+
 
 </body>
+
+
 </html>
