--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name="keywords" content="Магазин одежды для нефоров и альтушек"  >
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link href="outlines.css" rel="stylesheet" >
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
+
     <title>Nefor store</title>
 </head>
 
@@ -15,7 +17,6 @@
 <header>
     <div class="header">
 
-       <!-- <span>-->
         <div class="left-buttons">
             <button class="header_buttons" id="women"  >Женское</button>
             <button class="header_buttons"  id="men" >Мужское</button>
@@ -31,17 +32,63 @@
              <a  href="#"> <i class="fas fa-shopping-bag">    </i>     </a>
         </span>
 
-
     </div>
-
-
 
 </header>
 
 <main>
 
 
+<div  id="categories_main" >
 
+    <div id="popular_categories"  > ПОПУЛЯРНЫЕ КАТЕГОРИИ  </div>
+    <div id="grid">
+
+            <div>
+               <a  href="#" >
+                    <img class="image" src="pics/45HaFZSyox7QMYS6J7oFar69w1SQoNhLJgvbjuVO.jpg"   alt="picture">
+                    <div  class="grid_text" >верхняя одежда </div>
+               </a>
+            </div>
+
+            <div>
+                <a  href="#" >
+                    <img class="image" src="pics/0ZDutuUM6BOFlTr9wifkRvIYrzqpbJL2sWBNN9cg.jpg"   alt="picture">
+                    <div class="grid_text"> джинсы </div>
+                </a>
+            </div>
+
+            <div>
+                <a  href="#" >
+                    <img class="image" src="pics/VxI0iNb4LiTNWfKZBMsamYImdgHcgfbn4QnDHiPR.jpg"   alt="picture">
+                    <div class="grid_text">свитеры и джемперы </div>
+                </a>
+            </div>
+
+        <div>
+            <a  href="#" >
+                <img class="image" src="pics/WVN0X44QI0hzgZrE9W09MF6j4ki07CLfIsjwyahV.jpg"   alt="picture">
+                <div class="grid_text">футболки и лонгсливы </div>
+            </a>
+        </div>
+
+
+        <div>
+            <a  href="#" >
+                <img class="image" src="pics/jmpAY5Sx8zRaO7J8oXBtQJIfacW6YG8ddT9Xwn4H.jpg"   alt="picture">
+                <div class="grid_text">брюки </div>
+            </a>
+        </div>
+
+        <div>
+            <a  href="#" >
+                <img class="image" src="pics/MHIL7xTLSNr5qcHoFheRlFIanyblFSpUG2KBTgqB.jpg"   alt="picture">
+                <div class="grid_text">толстовки и худи </div>
+            </a>
+        </div>
+    </div>
+
+</div>
 
 
 
