--- a/about.html
+++ b/about.html
@@ -1,4 +1,3 @@
-<!--
 <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -7,21 +6,52 @@
     <meta name="keywords" content="О магазине Nefor">
     <link href="outlines.css" rel="stylesheet">
     <title>About Nefor Store</title>
+
+    <style> * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
+
+    body {
+        font-family: sans-serif;
+        font-size: 40px;
+        width: 100%;
+        min-height: 100vh;
+    }
+
+    [class^="box-"] {
+        background-color: skyblue;
+        /* Размещаем контейнеры по центру */
+        display: grid;
+        place-items: center;
+    }
+
+    .box-1 {
+        place-items: flex-start;
+    }
+
+    .container {
+        display: grid;
+        height: 10vh;
+        width: 90%;
+        grid-template-columns : repeat(4, 1fr);
+        row-gap:  50px;
+        column-gap:  202px;
+    }
+
+    </style>
+
 </head>
 <body>
-<header>
-    <h1>About Nefor Store</h1>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About Us</a>
-    </nav>
-</header>
 
-<main>
-    <p>Welcome to the Nefor Store, where we offer a wide range of clothing for alternative fashion.</p>
-</main>
+<div class="container">
+    <div class="box-1"> A </div>
+    <div class="box-2"> B </div>
+    <div class="box-3"> C </div>
+    <div class="box-4"> D </div>
+</div>
 
-<footer></footer>
+
 </body>
 </html>
--->
