--- a/index.html
+++ b/index.html
@@ -10,20 +10,22 @@
     <link href="outlines.css" rel="stylesheet" >
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
 
-    <title>Nefor store</title>
+    <title>STORE</title>
 </head>
 
 <body>
 <header>
     <div class="header">
 
-        <div class="left-buttons">
-            <button class="header_buttons" id="women"  >Женское</button>
-            <button class="header_buttons"  id="men" >Мужское</button>
 
-        </div>
+        <pre>/   _____/\__    ___/\_____  \\______   \_   _____/
+ \_____  \   |    |    /   |   \|       _/|    __)_
+ /        \  |    |   /    |    \    |   \|        \
+/_______  /  |____|   \_______  /____|_  /_______  /
+        \/                    \/       \/        \/ </pre>
 
-        <button   class="header_buttons"  id="main_link">Nefor store</button>
+
+        <strong   class="header_buttons"  id="main_link">STORE</strong>
 
         <span class="icon-buttons">
             <a  href="#"> <i class="fas fa-search">    </i>     </a>
@@ -41,33 +43,33 @@
 
 <div  id="categories_main" >
 
-    <div id="popular_categories"  > ПОПУЛЯРНЫЕ КАТЕГОРИИ  </div>
-    <div id="grid">
+    <b id="popular_categories"  > ПОПУЛЯРНЫЕ КАТЕГОРИИ  </b>
+    <div id="categories-grid">
 
             <div>
                <a  href="#" >
-                    <img class="image" src="pics/45HaFZSyox7QMYS6J7oFar69w1SQoNhLJgvbjuVO.jpg"   alt="picture">
+                    <img class="image" src="pics/header_pics/45HaFZSyox7QMYS6J7oFar69w1SQoNhLJgvbjuVO.jpg"   alt="picture">
                     <div  class="grid_text" >верхняя одежда </div>
                </a>
             </div>
 
             <div>
                 <a  href="#" >
-                    <img class="image" src="pics/0ZDutuUM6BOFlTr9wifkRvIYrzqpbJL2sWBNN9cg.jpg"   alt="picture">
+                    <img class="image" src="pics/header_pics/0ZDutuUM6BOFlTr9wifkRvIYrzqpbJL2sWBNN9cg.jpg"   alt="picture">
                     <div class="grid_text"> джинсы </div>
                 </a>
             </div>
 
             <div>
                 <a  href="#" >
-                    <img class="image" src="pics/VxI0iNb4LiTNWfKZBMsamYImdgHcgfbn4QnDHiPR.jpg"   alt="picture">
+                    <img class="image" src="pics/header_pics/VxI0iNb4LiTNWfKZBMsamYImdgHcgfbn4QnDHiPR.jpg"   alt="picture">
                     <div class="grid_text">свитеры и джемперы </div>
                 </a>
             </div>
 
         <div>
             <a  href="#" >
-                <img class="image" src="pics/WVN0X44QI0hzgZrE9W09MF6j4ki07CLfIsjwyahV.jpg"   alt="picture">
+                <img class="image" src="pics/header_pics/WVN0X44QI0hzgZrE9W09MF6j4ki07CLfIsjwyahV.jpg"   alt="picture">
                 <div class="grid_text">футболки и лонгсливы </div>
             </a>
         </div>
@@ -75,14 +77,14 @@
 
         <div>
             <a  href="#" >
-                <img class="image" src="pics/jmpAY5Sx8zRaO7J8oXBtQJIfacW6YG8ddT9Xwn4H.jpg"   alt="picture">
+                <img class="image" src="pics/header_pics/jmpAY5Sx8zRaO7J8oXBtQJIfacW6YG8ddT9Xwn4H.jpg"   alt="picture">
                 <div class="grid_text">брюки </div>
             </a>
         </div>
 
         <div>
             <a  href="#" >
-                <img class="image" src="pics/MHIL7xTLSNr5qcHoFheRlFIanyblFSpUG2KBTgqB.jpg"   alt="picture">
+                <img class="image" src="pics/header_pics/MHIL7xTLSNr5qcHoFheRlFIanyblFSpUG2KBTgqB.jpg"   alt="picture">
                 <div class="grid_text">толстовки и худи </div>
             </a>
         </div>
@@ -90,6 +92,82 @@
 
 </div>
 
+    <div>
+        <h1>ПОПУЛЯРНЫЕ ТОВАРЫ</h1>
+
+        <div id="goods-grid">
+
+                <div class="single-product">
+
+                        <img class="image" src="pics/products_pics/BF2443101007_50_1.jpg"   alt="picture">
+                        <div class="price" > 5000 ₽</div>
+                        <div  class="grid_text" >куртка стеганая со съемным капюшоном </div>
+                        <button class="add_to_cart"> Добавить в корзину  </button>
+
+                </div>
+
+                <div class="single-product">
+
+                    <img class="image" src="pics/products_pics/BF2443109005_103_2.webp"   alt="picture">
+                    <div class="price" > 3799 ₽  </div>
+                    <div  class="grid_text" >Брюки-парашюты широкие</div>
+                    <button class="add_to_cart"> Добавить в корзину  </button>
+
+                </div>
+
+            <div class="single-product">
+
+                <img class="image" src="pics/products_pics/BF2443123004_50_2.webp"   alt="picture">
+                <div class="price" > 3599 ₽  </div>
+                <div  class="grid_text" >Худи флисовая с капюшоном </div>
+                <button class="add_to_cart"> Добавить в корзину  </button>
+
+            </div>
+
+            <div class="single-product">
+
+                <img class="image" src="pics/products_pics/BF2443123002_61_1.webp"   alt="picture">
+                <div class="price" > 2999 ₽ </div>
+                <div  class="grid_text" >Свитшот oversize из флиса </div>
+                <button class="add_to_cart"> Добавить в корзину  </button>
+
+            </div>
+
+            <div class="single-product">
+
+                <img class="image" src="pics/products_pics/BF2443101007_50_1.jpg"   alt="picture">
+                <div class="price" > 6599 ₽  </div>
+                <div  class="grid_text" >Куртка флисовая утепленная с капюшоном </div>
+                <button class="add_to_cart"> Добавить в корзину  </button>
+
+            </div>
+
+            <div class="single-product">
+
+                <img class="image" src="pics/products_pics/BF2443120002_55_3.webp"   alt="picture">
+                <div class="price" > 1299 ₽  </div>
+                <div  class="grid_text" >Футболка хлопковая свободная с принтом </div>
+                <button class="add_to_cart"> Добавить в корзину  </button>
+
+            </div>
+
+            <div>
+
+                <div class="single-product">
+
+                    <img class="image" src="pics/products_pics/BF2443120002_55_3.webp"   alt="picture">
+                    <div class="price" > 1299 ₽  </div>
+                    <div  class="grid_text" >Футболка хлопковая свободная с принтом </div>
+                    <button class="add_to_cart"> Добавить в корзину  </button>
+
+                </div>
+
+            </div>
+
+        </div>
+
+
+    </div>
 
 
 </main>
