--- a/about.html
+++ b/about.html
@@ -1,57 +1,51 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="О магазине Nefor">
-    <link href="outlines.css" rel="stylesheet">
-    <title>About Nefor Store</title>
-
-    <style> * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-    }
-
-    body {
-        font-family: sans-serif;
-        font-size: 40px;
-        width: 100%;
-        min-height: 100vh;
-    }
-
-    [class^="box-"] {
-        background-color: skyblue;
-        /* Размещаем контейнеры по центру */
-        display: grid;
-        place-items: center;
-    }
-
-    .box-1 {
-        place-items: flex-start;
-    }
-
-    .container {
-        display: grid;
-        height: 10vh;
-        width: 90%;
-        grid-template-columns : repeat(4, 1fr);
-        row-gap:  50px;
-        column-gap:  202px;
-    }
-
-    </style>
-
+    <title>Bootstrap Example</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 <body>
 
 <div class="container">
-    <div class="box-1"> A </div>
-    <div class="box-2"> B </div>
-    <div class="box-3"> C </div>
-    <div class="box-4"> D </div>
-</div>
+    <h2>Carousel Example</h2>
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
 
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner">
+            <div class="item active">
+                <img src="la.jpg" alt="Los Angeles" style="width:100%;">
+            </div>
+
+            <div class="item">
+                <img src="chicago.jpg" alt="Chicago" style="width:100%;">
+            </div>
+
+            <div class="item">
+                <img src="ny.jpg" alt="New york" style="width:100%;">
+            </div>
+        </div>
+
+        <!-- Left and right controls -->
+        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+</div>
 
 </body>
 </html>
