--- a/index.html
+++ b/index.html
@@ -160,6 +160,70 @@
 
 
 
+
+            <div class="single-product">
+
+                <img class="image" src="pics/products_pics/BF2443123004_10_5.webp"   alt="picture">
+
+                <div class="product-info">
+
+                    <div class="price" > 3599 ₽</div>
+                    <div  class="grid_text" >Худи флисовая с капюшоном-балаклавой </div>
+                    <button class="add_to_cart"> Добавить в корзину  </button>
+
+                </div>
+
+
+            </div>
+
+            <div class="single-product">
+
+                <img class="image" src="pics/products_pics/BF2443101010_5_6.webp"   alt="picture">
+                <div class="price" > 6599 ₽  </div>
+                <div  class="grid_text" >Куртка из искусственного меха с принтом</div>
+                <button class="add_to_cart"> Добавить в корзину  </button>
+
+            </div>
+
+            <div class="single-product">
+
+                <img class="image" src="pics/products_pics/BF2443123021_50_1.webp"   alt="picture">
+                <div class="price" > 2999 ₽  </div>
+                <div  class="grid_text" >Худи oversize утепленная с капюшоном </div>
+                <button class="add_to_cart"> Добавить в корзину  </button>
+
+            </div>
+
+            <div class="single-product">
+
+                <img class="image" src="pics/products_pics/2433123013_75_2.webp"   alt="picture">
+                <div class="price" > 3799 ₽ ₽ </div>
+                <div  class="grid_text" >Худи-зипка oversize с капюшоном и принтом </div>
+                <button class="add_to_cart"> Добавить в корзину  </button>
+
+            </div>
+
+            <div class="single-product">
+
+                <img class="image" src="pics/products_pics/2433117013_55_2.webp"   alt="picture">
+                <div class="price" > 3299 ₽  </div>
+                <div  class="grid_text" >Рубашка oversize клетчатая с открытыми срезами </div>
+                <button class="add_to_cart"> Добавить в корзину  </button>
+
+            </div>
+
+            <div class="single-product">
+
+                <img class="image" src="pics/products_pics/2433117013_55_2.webp"   alt="picture">
+                <div class="price" > 2299 ₽  </div>
+                <div  class="grid_text" >Лонгслив oversize хлопковый в полоску </div>
+                <button class="add_to_cart"> Добавить в корзину  </button>
+
+            </div>
+
+
+
+
         </div>
 
 
@@ -195,7 +259,17 @@
 
     </ul>
 </section>
+
+
+    <q>
+        <sub>w</sub> eb labs</q>
+
+    <p>
+        ©  <del>Петроград, Российская Империя</del>
+        <ins>Санкт-Петербург,Российская Федерация</ins>
+    </p>
 </div>
+
 
 
 
